Fixed users page and home page & Added visibility button on password input

--- a/src/Content/Home/home.module.css
+++ b/src/Content/Home/home.module.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(6, 1fr);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    grid-auto-rows: 300px;
+    grid-auto-rows: 200px;
     color: white;
     font-size: 24px;
     padding: 20px;
